# rr_tracking

./: .gitignore  readme.md  requirements.txt
blaze_pose/: CMakeLists.txt  package.xml
blaze_pose/launch/: track_breath_centroid.launch
blaze_pose/scripts/: blazePose_node.py
boson_camera/config/: boson640_config.yaml
boson_camera/config/calibration/: boson640.yaml
boson_camera/launch/: boson640.launch  boson_with_display.launch
boson_camera/src/: boson_ros_node.cpp
boson_utils/: CMakeLists.txt  package.xml
boson_utils/launch/: loop_boson.launch
boson_utils/rviz/: view_thermal.rviz
boson_utils/scripts/: clahe_filter_node.py
eeyore/: CMakeLists.txt
eeyore/src/: boson.cpp
eeyoreROS/: CMakeLists.txt
eeyoreROS/src/: boson_node.cpp
rr_tracker/: CMakeLists.txt  package.xml
rr_tracker/launch/: full_system_live.launch  full_system_loop.launch
rr_tracker/msg/: ProcessingState.msg  TrackingState.msg
rr_tracker/scripts/: facial_tracking_node.py  gui_node.py  signal_processing_node.py
rr_tracking/: CMakeLists.txt  package.xml
rr_tracking/launch/: full_system_live.launch  full_system_loop.launch
rr_tracking/msg/: ProcessingState.msg  StableRange.msg  TrackingState.msg
rr_tracking/scripts/: blaze_pose_node.py  display_node.py  facial_tracking_node.py  gui_helper.py  gui_node.py  rr_tracking_node.py  signal_processing_node.py
