<?xml version="1.0"?>
<package format="2">
  <name>rr_tracking</name>
  <version>0.0.1</version>
  <description>Python-only ROS package</description>

  <maintainer email="etsa@seas.upenn.edu">Ethan Sanchez</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Optional: standard dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>